#
# CMake
#

IF( USE_BULLETPHYSICS )
    ADD_SUBDIRECTORY( bullet/src )
ENDIF( USE_BULLETPHYSICS )	

ADD_SUBDIRECTORY( tinyxml )
ADD_SUBDIRECTORY( zlib )
ADD_SUBDIRECTORY( libogg )
ADD_SUBDIRECTORY( libvorbis )
ADD_SUBDIRECTORY( libtheora )
ADD_SUBDIRECTORY( pcre )
ADD_SUBDIRECTORY( collada )
ADD_SUBDIRECTORY( squish )
ADD_SUBDIRECTORY( lpng )
ADD_SUBDIRECTORY( ljpeg )
ADD_SUBDIRECTORY( lmng )
ADD_SUBDIRECTORY( lungif )
ADD_SUBDIRECTORY( opcode )
ADD_SUBDIRECTORY( convexDecomp )

IF( USE_RECASTNAVITATION )
    ADD_SUBDIRECTORY( recast )
ENDIF( USE_RECASTNAVITATION )

IF( USE_NVIDIAPHYSX )
    ADD_SUBDIRECTORY( nxuStream )
    ADD_SUBDIRECTORY( nxuCharacter )
ENDIF( USE_NVIDIAPHYSX )
